Resolved tooltip overwrapping issues

--- a/src/llp-global-styles.scss
+++ b/src/llp-global-styles.scss
@@ -383,6 +383,11 @@ body{
                 color: $clr--8;
             }
             
+        }        
+    }
+    .error--happen{
+        .mat-form-field-wrapper{
+            padding-right: 25px !important;
         }
     }
     .mat-datepicker-content{
